            - The attribute 'efilter_type' is now read only.
        # In 'creme_core.models' :
            - In the values of 'ButtonMenuItem.button_id', the prefix "button_" has been removed
              (see 'creme.creme_core.gui.button_menu.Button.generate_id()').
            - In the method 'EntityFilter.can_edit()', the type of filter is not checked anymore (it is checked by the views).
            - In the model 'FieldsConfig' :
                - The attributes "_excluded_fnames" & "_required_fnames" have been removed.
                - The method 'update_form_fields()' now takes a form instance, and can set the _meta attribute (backported to 2.5.6/2.4.13).
            - The method 'creme_core.models.history._HLTAuxCreation._model_info()' has been removed.
        # In 'creme_core.gui' :
            - The method 'bricks._BrickRegistry.get_bricks()' :
                - does not build 'SpecificRelationsBrick' & 'CustomBrick' when no entity is given.
                - does not build 'CustomBrick' when the entity's type does not match.
            - The class 'bulk_update.FieldNotAllowed' has been removed.
        # In 'creme_core.views' :
            - In the context created by the class-view 'search.Search',
              "models" is now a list of CremeEntity classes (use "verbose_names" instead).
            - In the view-mixin 'entity_filter.EntityFilterMixin', the attribute 'efilter_registry' has been replaced by 'efilter_type'.
        # In the templatetag "{% search_form %}" (from library "creme_search")
            - The argument "user" has been removed.
            - A mandatory argument "models" has been added.
        # Apps :
            * Creme_config :
                - The value of class attribute "id" of several Brick classes (for bricks configuration) have changed (mainly "block" => "brick").
                - In the class 'registry._ConfigRegistry' :